test/files/run/t6320.check

scala> import scala.language.dynamics
import scala.language.dynamics

scala> class Dyn(m: Map[String, Any]) extends Dynamic { def selectDynamic[T](s: String): T = m(s).asInstanceOf[T] }
                                              ^
       error: extension of type scala.Dynamic needs to be enabled
       by making the implicit value scala.language.dynamics visible.
       This can be achieved by adding the import clause 'import scala.language.dynamics'
       or by setting the compiler option -language:dynamics.
       See the Scaladoc for value scala.language.dynamics for a discussion
       why the feature needs to be explicitly enabled.

scala> new Dyn(Map("foo" -> 10)).foo[Int]
           ^
       error: not found: type Dyn

scala> :quit
